separate controllers for @tag and @operation
